<resources>
    <string name="app_name">New Angeles Rival Randomizer</string>

    <!--Corp names-->
    <string name="corp_globalsec">Globalsec</string>
    <string name="corp_haasbioroid">Haas-Bioroid</string>
    <string name="corp_jinteki">Jinteki</string>
    <string name="corp_melange">Melange Mining</string>
    <string name="corp_nbn">NBN</string>
    <string name="corp_weyland">Weyland Consortium</string>

    <string name="federalist">Federalist</string>
    <string name="unused">Unused card</string>
    <string name="text_select">Select corporations in play</string>
    <string name="button_submit">Submit</string>
    <string name="text_four_corps_warning">Please select at least four corporations.</string>
    <string name="button_ok">OK</string>
    <string name="button_new_game">New Game</string>
    <string name="button_continue_saved">Continue Saved Game</string>

    <string name="text_display_all_rivals_initial">Ready to display rivals. Click the button below to begin.</string>
    <string name="button_start">Start</string>

    <string name="text_reveal_rival_instruction">Press the button below to reveal your rival card.</string>
    <string name="button_reveal_rival">Reveal</string>
    <string name="text_your_rival_is">Your rival is %1$s.</string>
    <string name="text_rival_finished_instruction">Press the button below when finished.</string>
    <string name="button_done">Done</string>

</resources>
